# fbclock

./: CMakeLists.txt
src/: bitmap_font.h  defs.h  fbanalogclock.c  fbanalogclock.h  file.c  file.h  font12.c  font16.c  font20.c  font24.c  font8.c  framebuffer.c  framebuffer.h  list.c  list.h  log.c  log.h  main.c  numberformat.c  numberformat.h  nvp.c  nvp.h  program.c  program.h  program_context.c  program_context.h  props.c  props.h  region.c  region.h  str.c  str.h  usage.c  usage.h
